welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:5: error: not found: value world_size
  for (i <- 1 to world_size){
                 ^Array2:7: error: not found: value world_size
    for (j <- 0 to world_size - 2){
                   ^Array2:9: error: value % is not a member of java.awt.Color
        setBrushColor(array((offset + j)) %world_size)
                                          ^Array2:9: error: not found: value world_size
        setBrushColor(array((offset + j)) %world_size)
                                           ^